--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,6 @@
-.lead {
-  min-width: 984px;
-  min-height: 1005px;
+.intro {
+  max-width: 790px;
+  min-height: 429px;
   display: flex;
   flex-direction: column;
   justify-content:  space-between;
