--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,5 @@
 .lead__caption {
-  margin: 6px 0 0;
+  margin: 6px 0 0 100px;
   color: #ffffff;
   text-transform: uppercase;
   font-weight: 400;
