finished sections places and photo-grid, fixed width of header and lead

--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,6 @@
 .intro__text {
   color: #ffffff;
-  margin: 0 0 33px 100px;
+  margin: 0 0 33px;
   font-weight: normal;
   font-size: 16px;
   line-height: 26px;
