finished block footer, fixed margins

--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,8 +1,8 @@
 .intro__title {
   max-width: 690px;
-  font-weight: bold;
+  font-weight: 900;
   font-size: 54px;
   line-height: 58px;
   color: #ffffff;
-  margin: 2px 0 40px;
+  margin: 37px 0 39px;
 }
