--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -8,9 +8,9 @@
 
 @font-face {
   font-family: "Inter";
-  src:url(inter/semibold.woff2) format("woff2"),
-      url(inter/semibold.ttf) format("truetype");
-  font-weight: 600;
+  src:url(inter/black.woff2) format("woff2"),
+      url(inter/black.ttf) format("truetype");
+  font-weight: 900;
   font-style: normal;
 }
 
