--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-content: center;
   grid-template-columns: 560px;
+  grid-template-rows: 153px 97px;
   color: #FFFFFF;
   text-decoration: none;
   transition: .6s;
