--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,9 +1,9 @@
 .lead__title {
   width: 720px;
-  font-weight: bold;
+  font-weight: 900;
   font-size: 96px;
   color:#ffffff;
   line-height: 100px;
-  margin:56px auto 32px;
+  margin:0 auto 32px;
   text-align: center;
 }
