--- a/pages/index.css
+++ b/pages/index.css
@@ -38,3 +38,6 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__list/footer__list.css);
 @import url(../blocks/footer/__menu/footer__menu.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__item/footer__item.css);
+@import url(../blocks/footer/__link/footer__link.css);
