added support for 1024 and 1280 resolutions

--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,7 +1,7 @@
 .cover__link {
   background: rgba(42, 44, 47, 0.3);
-  width: 1184px;
-  height: 740px;
+  max-width: 1184px;
+  max-height: 740px;
   display: grid;
   justify-content: center;
   align-content: center;
@@ -10,6 +10,7 @@
   color: #FFFFFF;
   text-decoration: none;
   transition: .6s;
+  min-height: 740px;
 }
 
 .cover__link:hover {
