--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,8 +1,15 @@
 .cover {
   background-image: url("../../images/bg-trains.jpg");
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
+  width: 100%;
   max-width: 1184px;
   min-height: 740px;
+}
+
+@media screen and (max-width: 1280px) {
+  .cover {
+    width: 100vw;
+  }
 }
