--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,11 +1,19 @@
 .lead__image {
   margin: 0;
-  width:100%;
   object-fit: contain;
+  width: 100%;
 }
 
 @media screen and (max-width: 1023px) {
-  .cover {
+  .lead__image {
+    margin: 0 auto 0 -24px;
+    width: 100vw;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__image {
+    margin: 0 auto 0 -16px;
     width: 100vw;
   }
 }
