--- a/blocks/page/__cover/page__cover.css
+++ b/blocks/page/__cover/page__cover.css
@@ -1,8 +1,25 @@
 .page__cover {
   margin: 0 auto 92px;
+  width: 100%;
 }
-@media screen and (max-width: 1024px) {
+
+@media screen and (max-width: 1279px) {
+  .page__cover {
+    margin: 0 auto 92px -48px;
+    width: 100vw;
+  }
+}
+
+@media screen and (max-width: 1023px) {
   .page__cover {
     margin: 0 auto 92px -24px;
+    width: 100vw;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .page__cover {
+    margin: 0 auto 92px -16px;
+    width: 100vw;
   }
 }
