--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,3 +7,10 @@
   margin: 0 0 26px;
   padding: 0;
 }
+
+@media screen and (max-width: 1023px)   {
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 26px;
+  }
+}
