--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,15 +1,31 @@
 .place {
   display: grid;
   grid-template-columns: minmax(40%, 460px) minmax(40%, 484px);
-  grid-template-rows: 1fr 460px;
+  grid-template-rows:  minmax(min-content, max-content) minmax(min-content, max-content);
   grid-auto-rows: 1fr;
   gap: 48px 40px;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1279px) {
   .place {
     grid-template-columns: minmax(40%, 440px) minmax(40%, 456px);
-    grid-template-rows: 1fr 440px;
+    grid-template-rows:  minmax(min-content, max-content) minmax(min-content, max-content);
     gap: 48px 32px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .place {
+    grid-template-columns: minmax(40%, 340px) minmax(40%, 352px);
+    grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
+    gap: 48px 28px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place {
+    grid-template-columns: 1fr ;
+    grid-template-rows: 1fr 340px;
+    gap: 48px 28px;
   }
 }
