fixed section cover at low resolution

--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,10 +1,16 @@
 .lead__subtitle {
-  width: 640px;
+  max-width: 640px;
   font-weight: normal;
   font-size: 30px;
   line-height: 36px;
   color: #ffffff;
   margin: 0 auto 64px;
   text-align: center;
+}
 
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
