--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -25,7 +25,7 @@
 @media screen and (max-width: 767px) {
   .place {
     grid-template-columns: 1fr ;
-    grid-template-rows: 1fr 340px;
+    grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content);
     gap: 48px 28px;
   }
 }
