--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,18 +1,24 @@
 .cover__link {
-  background: rgba(42, 44, 47, 0.3);
-  max-width: 1184px;
-  max-height: 740px;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-content: center;
-  grid-template-columns: 560px;
-  grid-template-rows: 153px 97px;
-  color: #FFFFFF;
+  align-items: center;
+  height: 740px;
+  width: 1184px;
+  box-sizing: border-box;
   text-decoration: none;
-  transition: .6s;
-  min-height: 740px;
+  background: rgba(42, 44, 47, 0.3);
+  transition: .6s
 }
 
 .cover__link:hover {
   background: rgba(42, 44, 47, 0.8);
+}
+
+@media screen and (max-width: 1279px) {
+  .cover__link {
+    min-height: 62.5vw;
+    width: 100%;
+    height: 100%;
+  }
 }
