--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,4 +7,16 @@
   line-height: 22px;
   max-width: 360px;
   margin: 32px auto;
+  z-index: 1000;
+
+}
+
+@media screen and (max-width: 767px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+    max-width: 288px;
+    margin:16px auto 0;
+    padding:0;
+  }
 }
