--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,5 +6,14 @@
   font-size: 72px;
   line-height: 76px;
   max-width: 560px;
-  margin: 0;
+  margin: 0 auto;
+  z-index: 1000;
+}
+
+@media screen and (max-width: 767px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+    max-width: 230px;
+  }
 }
