--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,8 +1,11 @@
 .cover {
-  background-image: url("../../images/bg-trains.jpg");
-  background-position: center;
-  background-size: cover;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+  background-image: url(../../images/bg-trains.jpg);
   background-repeat: no-repeat;
-  max-width: 1184px;
-  min-height: 740px;
+  background-size: cover;
+  background-position: center center;
 }
