--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,9 +1,16 @@
 .lead__title {
-  width: 720px;
+  max-width: 720px;
   font-weight: 900;
   font-size: 96px;
   color:#ffffff;
   line-height: 100px;
   margin:0 auto 32px;
   text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+.lead__title {
+  font-size: 40px;
+  line-height: 44px;
+}
 }
