--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -3,3 +3,11 @@
   max-height: 100%;
   margin: 0;
 }
+
+@media screen and (max-width: 767px) {
+  .place__image {
+    width: 100vw;
+    max-height: 100%;
+    margin: 0;
+  }
+}
