--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,3 +2,9 @@
   align-self: end;
   justify-self: start;
 }
+
+@media screen and (max-width: 767px) {
+  .place__website {
+    margin: 0 16px;
+  }
+}
