--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,11 @@
 .places {
   max-width: 984px;
 }
+
+@media screen and (max-width: 767px) {
+  .places {
+    width:100vw;
+    margin-left: -16px;
+
+  }
+}
