--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,3 +6,9 @@
   font-size: 14px;
   line-height: 16px;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    line-height: 14px;
+  }
+  }
