--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -6,3 +6,10 @@
   margin: 0;
   padding: 0;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__list {
+    flex-direction: column;
+    align-content: flex-start;
+  }
+}
