--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,10 +1,19 @@
 .footer {
   max-width: 1184px;
-  height: 18px;
+  min-height: 18px;
   justify-content: flex-end;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
   color: #FFFFFF;
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column;
+    min-height: 310px;
+  }
 }
