--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -6,7 +6,7 @@
 
 @media screen and (max-width: 767px) {
   .header__logo {
-    width: 142px;
-    height: 42px;
+    max-width: 142px;
+    max-height: 42px;
   }
 }
