fixed horisontal scroll

--- a/blocks/page/__cover/page__cover.css
+++ b/blocks/page/__cover/page__cover.css
@@ -1,25 +1,26 @@
 .page__cover {
   margin: 0 auto 92px;
   width: 1184px;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1279px) {
   .page__cover {
     margin: 0 auto 92px -48px;
-    width: 100vw;
+    width: calc(100vw - 19px);
   }
 }
 
 @media screen and (max-width: 1023px) {
   .page__cover {
     margin: 0 auto 92px -24px;
-    width: 100vw;
+    width: calc(100vw - 19px);
   }
 }
 
 @media screen and (max-width: 767px) {
   .page__cover {
     margin: 0 auto 92px -16px;
-    width: 100vw;
+    width: calc(100vw - 19px);
   }
 }
