--- a/blocks/page/_offset/page_offset.css
+++ b/blocks/page/_offset/page_offset.css
@@ -1,16 +1,10 @@
 .page_offset {
-  padding: 28px 48px 24px;
+  padding: 28px 0;
   margin:0;
-}
-
-@media screen and (max-width: 1023px) {
-  .page_offset {
-    padding: 28px 24px 24px;
-  }
 }
 
 @media screen and (max-width: 767px) {
   .page_offset {
-    padding: 16px;
+    padding: 16px 0;
   }
 }
