--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -7,3 +7,21 @@
   line-height: 14px;
   letter-spacing: 0.15em;
 }
+
+@media screen and (max-width: 1279px) {
+  .lead__caption {
+    margin: 8px 48px 0;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .lead__caption {
+    margin: 8px 24px 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__caption {
+    margin: 8px 16px 0;
+  }
+}
