--- a/blocks/offset-block/offset-block.css
+++ b/blocks/offset-block/offset-block.css
@@ -1,6 +1,37 @@
 .offset-block {
   margin: 0 auto 92px;
 }
+
 .offset-block:first-of-type {
   margin: 0 auto 56px;
+}
+
+@media screen and (max-width: 1279px) {
+  .offset-block {
+    margin: 0 48px 92px;
+  }
+
+  .offset-block:first-of-type {
+    margin: 0 48px 56px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .offset-block {
+    margin: 0 24px 92px;
+  }
+
+  .offset-block:first-of-type {
+    margin: 0 24px 56px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .offset-block {
+    margin: 0 16px 92px;
+  }
+
+  .offset-block:first-of-type {
+    margin: 0 16px 56px;
+  }
 }
