--- a/blocks/page/__footer/page__foter.css
+++ b/blocks/page/__footer/page__foter.css
@@ -1,8 +1,20 @@
 .page__footer {
   margin: 0 auto;
 }
+@media screen and (max-width: 1279px) {
+  .page__footer {
+    margin: 0 48px 24px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .page__footer {
+    margin: 0 24px 24px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .page__footer {
-    margin: 0 0 24px;
+    margin: 0 16px 24px;
   }
 }
