--- a/blocks/page/__places/page__places.css
+++ b/blocks/page/__places/page__places.css
@@ -1,3 +1,21 @@
 .page__places {
-  margin: 12px auto 92px auto;
+  margin: 12px auto 92px;
+}
+
+@media screen and (max-width: 1279px) {
+  .page__places {
+    margin: 12px auto 92px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .page__places {
+    margin: 12px 24px 92px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .page__places {
+    margin: 12px 0 92px;
+  }
 }
