--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,6 @@
 .place {
   display: grid;
-  grid-template-columns: minmax(40%, 460px) minmax(40%, 484px);
+  grid-template-columns: 1fr 1fr;
   grid-template-rows:  minmax(min-content, max-content) minmax(min-content, max-content);
   grid-auto-rows: 1fr;
   gap: 48px 40px;
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 1279px) {
   .place {
-    grid-template-columns: minmax(40%, 440px) minmax(40%, 456px);
+    grid-template-columns: 1fr 1fr;
     grid-template-rows:  minmax(min-content, max-content) minmax(min-content, max-content);
     gap: 48px 32px;
   }
@@ -16,7 +16,7 @@
 
 @media screen and (max-width: 1023px) {
   .place {
-    grid-template-columns: minmax(40%, 340px) minmax(40%, 352px);
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
     gap: 48px 28px;
   }
