--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,10 +2,8 @@
   max-width: 984px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
   .places {
-    width:100vw;
-    margin-left: -16px;
-
+    max-width: 100%;
   }
 }
