--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -3,8 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 740px;
-  width: 1184px;
+  min-height: 740px;
+  width: 100%;
+  max-width: 1184px;
   box-sizing: border-box;
   text-decoration: none;
   background: rgba(42, 44, 47, 0.3);
@@ -18,7 +19,5 @@
 @media screen and (max-width: 1279px) {
   .cover__link {
     min-height: 62.5vw;
-    width: 100%;
-    height: 100%;
   }
 }
