--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,8 @@
 .header {
   max-width: 1184px;
   min-height: 52px;
-  justify-content: flex-end;
+  justify-content: space-between;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  align-items: flex-end;
 }
