--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,10 +8,16 @@
   text-align: center;
 }
 
+@media screen and (max-width: 1279px) {
+  .lead__subtitle {
+    margin: 0 auto 55px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .lead__subtitle {
     font-size: 16px;
     line-height: 20px;
-    margin: 0 16px 64px;
+    margin: 0 16px 40px;
   }
 }
