--- a/blocks/page/__intro/page__intro.css
+++ b/blocks/page/__intro/page__intro.css
@@ -1,22 +1,21 @@
-.page__cover {
+.page__intro {
   margin: 0 auto 92px;
-  max-width: 1184px;
-  width: 100%;
 }
 
 @media screen and (max-width: 1279px) {
-  .page__cover {
+  .page__intro {
+    margin: 0 48px 92px;
   }
 }
 
 @media screen and (max-width: 1023px) {
-  .page__cover {
-    margin: 0 auto 88px;
+  .page__intro {
+    margin: 0 24px 88px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .page__cover {
-    margin: 0 auto 64px;
+  .page__intro {
+    margin: 0 16px 64px;
   }
 }
