--- a/blocks/page/_offset_large/page_offset_large.css
+++ b/blocks/page/_offset_large/page_offset_large.css
@@ -1,10 +1,10 @@
-.page_offset {
+.page_offset_large {
   padding: 28px 0;
   margin:0;
 }
 
 @media screen and (max-width: 767px) {
-  .page_offset {
+  .page_offset_large {
     padding: 16px 0;
   }
 }
