--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -8,6 +8,10 @@
   padding: 0;
 }
 
+.place__paragraph:last-of-type {
+  margin: 0;
+}
+
 @media screen and (max-width: 1023px)   {
   .place__paragraph {
     font-size: 16px;
@@ -17,6 +21,10 @@
 
 @media screen and (max-width: 767px) {
   .place__paragraph {
-    margin: 0 16px;
+    margin: 0 16px 26px;
+  }
+
+  .place__paragraph:last-of-type {
+    margin: 0 16px 0;
   }
 }
