--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -4,4 +4,7 @@
   font-size: 12px;
   line-height: 12px;
   letter-spacing: 0.2em;
+  text-transform: uppercase;
+  margin: 0 0 12px;
+  padding: 0;
 }
