--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -1,3 +1,9 @@
 .places__place {
   margin: 80px 0 0;
 }
+
+@media screen and (max-width: 767px) {
+  .places__place {
+    margin: 50px 0 0;
+  }
+}
